# simple-application

./: .gitignore  CMakeLists.txt  LICENSE  license.txt  readme.md
docs/: CMakeLists.txt  Doxyfile.in
include/simple/application/: application.h  update_loop.h
tests/: CMakeLists.txt
tests/test_application/: test_application.cpp
tests/test_include/: test_include_application.cpp
tests/test_usage/: test_application.cpp
